monitoring/elasticsearch/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.org/client-max-body-size: "20"


  name: kibana-ingress
  namespace: default
  
spec:
  rules:
  - host: kibana.shopnest.uz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elasticsearch-kibana
            port:
              number: 5601

  tls:
  - hosts:
    - kibana.shopnest.uz
    secretName: letsencrypt-prod
